--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "core-js": "^3.8.3",
+    "cors-anywhere": "^0.4.4",
     "vue": "^3.2.13"
   },
   "devDependencies": {
